[gd_scene load_steps=5 format=3 uid="uid://ocynuoaqqpy5"]

[ext_resource type="Script" path="res://tests/map tiles/UI/Buttons.gd" id="1_eor3x"]
[ext_resource type="Script" path="res://tests/map tiles/UI/LogText.gd" id="1_lsj4l"]
[ext_resource type="Script" path="res://tests/map tiles/UI/EscapeWindow.gd" id="3_xngsc"]
[ext_resource type="PackedScene" uid="uid://5nmg1gih3jg6" path="res://tests/menu/menu_test.tscn" id="4_vemvb"]

[node name="Ui" type="Control"]
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_vertical_guides_ = [229.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -24.0
offset_right = -657.6
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 111.0
offset_top = 319.0
offset_right = 42.4
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 111.0
offset_top = -24.0
offset_right = 42.4
offset_bottom = -432.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 761.0
offset_top = -23.0
offset_right = 42.4
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Upper" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LogContainer" type="PanelContainer" parent="VBoxContainer/Upper"]
custom_minimum_size = Vector2(100, 320)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LogText" type="RichTextLabel" parent="VBoxContainer/Upper/LogContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "



















"
scroll_following = true
script = ExtResource("1_lsj4l")
metadata/_edit_lock_ = true

[node name="BoardViewer" type="PanelContainer" parent="VBoxContainer/Upper"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 8
auto_translate = false
localize_numeral_system = false
mouse_filter = 2

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/Upper/BoardViewer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 110
script = ExtResource("1_eor3x")

[node name="Up" type="Button" parent="VBoxContainer/Upper/BoardViewer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "^"

[node name="HButtons" type="HBoxContainer" parent="VBoxContainer/Upper/BoardViewer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 610

[node name="Left" type="Button" parent="VBoxContainer/Upper/BoardViewer/Buttons/HButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "<"

[node name="Right" type="Button" parent="VBoxContainer/Upper/BoardViewer/Buttons/HButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = ">"

[node name="Down" type="Button" parent="VBoxContainer/Upper/BoardViewer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "v"

[node name="Bottom" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/Bottom"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Check" type="Button" parent="VBoxContainer/Bottom/Buttons"]
layout_mode = 2
size_flags_vertical = 4
text = "CHECK"

[node name="Items" type="Button" parent="VBoxContainer/Bottom/Buttons"]
layout_mode = 2
size_flags_vertical = 4
text = "ITEMS"

[node name="Escape" type="Button" parent="VBoxContainer/Bottom/Buttons"]
layout_mode = 2
size_flags_vertical = 4
text = "ESCAPE"

[node name="PartyContainer" type="HBoxContainer" parent="VBoxContainer/Bottom"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CurrentParty" type="PanelContainer" parent="VBoxContainer/Bottom/PartyContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="AvailableCharacters" type="PanelContainer" parent="VBoxContainer/Bottom/PartyContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2

[node name="EscapeWindow" type="PanelContainer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_xngsc")
menu_scene = ExtResource("4_vemvb")

[node name="VBoxContainer" type="VBoxContainer" parent="EscapeWindow"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="EscapeWindow/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "¿Seguro que quieres escapar?
(perderás todo lo que obtuviste)"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="EscapeWindow/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonYes" type="Button" parent="EscapeWindow/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sí"

[node name="ButtonNo" type="Button" parent="EscapeWindow/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No"

[connection signal="pressed" from="VBoxContainer/Bottom/Buttons/Escape" to="EscapeWindow" method="_on_escape_pressed"]
[connection signal="pressed" from="EscapeWindow/VBoxContainer/HBoxContainer/ButtonYes" to="EscapeWindow" method="_on_button_yes_pressed"]
[connection signal="pressed" from="EscapeWindow/VBoxContainer/HBoxContainer/ButtonNo" to="EscapeWindow" method="_on_button_no_pressed"]
